compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_missing_for_multiple.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..2, 3..4 of int\nvar _ := a(1)"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), range of `int` (Unevaluated(PackageId(0), BodyId(2)) .. Expr(Unevaluated(PackageId(0), BodyId(3)), Yes)), ) of int
"_"@"src/main.t:36..37" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:41..42: expected 2 arguments, found 1
| error for src/main.t:41..42: subscript is missing 1 argument
