compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_missing_for_single.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : array 1..2 of int\nvar _ := a()"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"_"@(FileId(1), 30..31) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 35..36: expected 1 argument, found 0
| error in file FileId(1) for 35..36: subscript is missing 1 argument
