compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_wrong_binding.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type i : int\nvar a : array 1..2 of int\nvar _ : int := a(i)"
---
"i"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"a"@"src/main.t:17..18" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"_"@"src/main.t:43..44" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:56..57: cannot pass `i` to this parameter
| error for src/main.t:56..57: `i` is a reference to a type, not a variable
| note for src/main.t:5..6: `i` declared here
