compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_wrong_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..2, 'c'..'d' of int\nvar _ : int := a(1.0, true)"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), range of `char` (Unevaluated(PackageId(0), BodyId(2)) .. Expr(Unevaluated(PackageId(0), BodyId(3)), Yes)), ) of int
"_"@(FileId(1), 40..41) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 53..56): mismatched types
| note for (FileId(1), 53..56): this is of type `real`
| note for (FileId(1), 53..56): parameter expects type `1 .. 2`
| info: `real` is not assignable into `1 .. 2`
error at (FileId(1), 58..62): mismatched types
| note for (FileId(1), 58..62): this is of type `boolean`
| note for (FileId(1), 58..62): parameter expects type `'c' .. 'd'`
| info: `boolean` is not assignable into `'c' .. 'd'`
