compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_multi_index.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : array 1..2, 'c'..'d' of int\nvar _ : int := a(1, 'c')"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), range of `char` (Unevaluated(LibraryId(0), BodyId(2)) .. Expr(Unevaluated(LibraryId(0), BodyId(3)), Yes)), ) of int
"_"@(FileId(1), 40..41) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

