compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_flexible_dynamic.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var c : int\nvar _ : flexible array 1 .. c of int"
---
"c"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"_"@"src/main.t:16..17" [ConstVar(Var, No)]: flexible array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
