compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_less_one.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : array 1..3 of int := init(1,2)"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), Yes)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:29..38: expected 3 elements, found 2
| error for src/main.t:29..38: `init` list is missing 1 element
